--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -12,6 +12,7 @@ body{
     background-color: var(--black);
     background-image: url("../images/bg.png");
     color: var(--white);
+    transition: all 1s ease;
 }
 
 :root{
@@ -42,4 +43,25 @@ ol,ul{
 
 .container-fluid{
     width: 100%;
+}
+
+.darkmode{
+    background-color: var(--white);
+    color: var(--black);
+}
+
+.darkmode .navbar-section a{
+    color: var(--black);
+}
+
+.darkmode .header-section img{
+    box-shadow: 0 0 25px var(--black);
+}
+
+.darkmode .content-section .social a{
+    color: var(--black);
+}
+
+.darkmode .footer-section a.top ion-icon{
+    color: gray;
 }
