--- a/assets/css/_content.css
+++ b/assets/css/_content.css
@@ -14,6 +14,12 @@
 
 .content-section .social{
     margin-top: 100px;
+    position: relative;
+}
+
+.content-section .social p{
+    color: var(--blue);
+    font-size: 22px;
 }
 
 .content-section .social ul{
@@ -38,8 +44,12 @@
         margin-top: 220px!important;
     }
     .content-section .social{
-    display: flex;
-    justify-content: space-around;
+        display: flex;
+        justify-content: space-around;
+    }
+    .content-section .social p{
+        position: absolute;
+        bottom: 40px;
     }
 }
 
@@ -52,6 +62,10 @@
     .content-section .social{
         display: flex;
         justify-content: space-around;
+    }
+    .content-section .social p{
+        position: absolute;
+        bottom: 40px;
     }
 }
 
