--- a/assets/css/_content.css
+++ b/assets/css/_content.css
@@ -46,6 +46,7 @@
     .content-section .social{
         display: flex;
         justify-content: space-around;
+        margin-top: 140px;
     }
     .content-section .social p{
         position: absolute;
@@ -62,6 +63,7 @@
     .content-section .social{
         display: flex;
         justify-content: space-around;
+        margin-top: 140px;
     }
     .content-section .social p{
         position: absolute;
