--- a/assets/css/_content.css
+++ b/assets/css/_content.css
@@ -43,6 +43,9 @@
         display: inline-block;
         margin-top: 220px!important;
     }
+    .content-section .about{
+        text-align: justify;
+    }
     .content-section .social{
         display: flex;
         justify-content: space-around;
